# QUARK-AUTONOMOUS

./: CMakeLists.txt  README.md  compile.sh  env_config.sh
src/include/: common.h  libcamera.h  libcontrol.h  libimage.h  libmodel.h  libuart.h
src/lib/: libcamera.cpp  libcontrol.cpp  libimage.cpp  libuart.cpp
src/src/: demo.cpp
